argocd/apps/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: argocd-app
  name: argocd-httproute
  namespace: argocd
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - argocd.yanello.net
  rules:
  - backendRefs:
    - name: argocd-server
      namespace: argocd
      port: 80
